# wheel-emulator-windows

./: .gitignore  CMakeLists.txt  LICENSE  LOGICK.txt  Makefile  README.md  THIRD_PARTY_LICENSES  build_with_g++.bat  cleanup_gadget.sh  flake.nix  logics.md  test_descriptor.py  wheel-emulator.conf
.github/workflows/: main.yml
src/: config.cpp  config.h  gamepad.cpp  gamepad.h  input.cpp  input.h  input_defs.h  main.cpp  vjoy_device.cpp  vjoy_device.h  wheel_device.cpp  wheel_device.h
src/hid/: hid_device.cpp  hid_device.h
src/input/: device_enumerator.cpp  device_scanner.cpp  device_scanner.h  input_manager.cpp  input_manager.h
src/vjoy_sdk/inc/: public.h
